// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checks Store Instance Checks offset of elements 1`] = `
Object {
  "height": 50,
  "left": 450,
  "top": 288,
  "width": 170,
}
`;

exports[`Checks Store Instance Checks offset of elements 2`] = `
Object {
  "height": 50,
  "left": 450,
  "top": 114,
  "width": 170,
}
`;

exports[`Checks Store Instance Checks offset of elements 3`] = `
Object {
  "height": 50,
  "left": 450,
  "top": 172,
  "width": 170,
}
`;

exports[`Checks Store Instance Checks offset of elements 4`] = `
Object {
  "height": 50,
  "left": 450,
  "top": 230,
  "width": 170,
}
`;

exports[`Checks Store Instance Checks transition of elements 1`] = `
Object {
  "translateX": 0,
  "translateY": 174,
}
`;

exports[`Checks Store Instance Checks transition of elements 2`] = `
Object {
  "translateX": 0,
  "translateY": -58,
}
`;

exports[`Checks Store Instance Checks transition of elements 3`] = `
Object {
  "translateX": 0,
  "translateY": -58,
}
`;

exports[`Checks Store Instance Checks transition of elements 4`] = `
Object {
  "translateX": 0,
  "translateY": -58,
}
`;

exports[`Checks Store Instance Restore offset of elements 1`] = `
Object {
  "height": 50,
  "left": 450,
  "top": 288,
  "width": 170,
}
`;

exports[`Checks Store Instance Restore offset of elements 2`] = `
Object {
  "height": 50,
  "left": 450,
  "top": 114,
  "width": 170,
}
`;

exports[`Checks Store Instance Restore offset of elements 3`] = `
Object {
  "height": 50,
  "left": 450,
  "top": 172,
  "width": 170,
}
`;

exports[`Checks Store Instance Restore offset of elements 4`] = `
Object {
  "height": 50,
  "left": 450,
  "top": 230,
  "width": 170,
}
`;

exports[`Checks Store Instance Restore transition of elements 1`] = `
Object {
  "translateX": 0,
  "translateY": 0,
}
`;

exports[`Checks Store Instance Restore transition of elements 2`] = `
Object {
  "translateX": 0,
  "translateY": 0,
}
`;

exports[`Checks Store Instance Restore transition of elements 3`] = `
Object {
  "translateX": 0,
  "translateY": 0,
}
`;

exports[`Checks Store Instance Restore transition of elements 4`] = `
Object {
  "translateX": 0,
  "translateY": 0,
}
`;
